--- a/ReactNativeApp_RealEstate/package.json
+++ b/ReactNativeApp_RealEstate/package.json
@@ -38,9 +38,11 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tailwindcss": "^4.0.7"
+    "tailwind-react-native-classnames": "^3.0.1",
+    "tailwindcss": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
