--- a/ReactNativeApp_RealEstate/app.json
+++ b/ReactNativeApp_RealEstate/app.json
@@ -4,21 +4,21 @@
     "slug": "ReactNativeApp_RealEstate",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/owl.png",
     "scheme": "real estate",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
       "image": "./assets/images/pngwing.png",
       "resizeMode": "cover",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#ffffff"  
     },
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/pngwing.png",
         "backgroundColor": "#ffffff"
       }
     },
@@ -32,7 +32,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/owl.png",
           /*"imageWidth": 200, */
           "resizeMode": "cover",
           "backgroundColor": "#ffffff",
