--- a/ReactNativeApp_RealEstate/app.json
+++ b/ReactNativeApp_RealEstate/app.json
@@ -11,7 +11,7 @@
     "splash": {
       "image": "./assets/images/pngwing.png",
       "resizeMode": "cover",
-      "backgroundColor": "#ffffff"  
+      "backgroundColor": "#ffffff"
     },
     "ios": {
       "supportsTablet": true
@@ -33,12 +33,12 @@
         "expo-splash-screen",
         {
           "image": "./assets/images/owl.png",
-          /*"imageWidth": 200, */
           "resizeMode": "cover",
           "backgroundColor": "#ffffff",
           "enableFullScreenImage_legacy": true
         }
-      ]
+      ],
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
