--- a/ReactNativeApp_RealEstate/package.json
+++ b/ReactNativeApp_RealEstate/package.json
@@ -18,13 +18,14 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.35",
+    "expo": "~52.0.38",
     "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.6",
-    "expo-font": "~13.0.3",
+    "expo-constants": "~17.0.8",
+    "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.17",
+    "expo-router": "~4.0.18",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
@@ -53,7 +54,7 @@
     "autoprefixer": "^10.4.20",
     "babel-preset-expo": "^12.0.8",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.4",
+    "jest-expo": "~52.0.6",
     "postcss": "^8.5.2",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
